--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,11 +7,12 @@ jobs:
       matrix:
         node-version: [ 18.x ]
     steps:
-      - uses: actions/chekout@v2
+      - uses: actions/checkout@v3
       - name: Starting Node.js ${{ matrix.node-version}}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with: 
           node-version: ${{ matrix.node-version}}
+          token: ${{ secrets.PAT }}
       - name: install modules
         run: npm install
       - name: build project
