--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,4 +16,4 @@ jobs:
       - name: install modules
         run: npm install
       - name: build project
-        run: npm run start
+        run: npm run build
