--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
-    "build": "webpack --watch & webpack-dev-server --inline --progress --colors --open"
+    "build": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
