--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open",
-    "prod": "webpack"
+    "dev": "webpack-dev-server --open --mode development",
+    "prod": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
